04-maze-tls/maze-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maze-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
  - host: maze.${ROOT_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: maze
            port:
              name: web
